<resources>
    <string name="app_name">YAPA!</string>

    <!-- general -->
    <string name="button_yes">Ja</string>
    <string name="button_no">Nei</string>
    <string name="button_skip">Hopp over</string>

    <!-- main_activity -->
    <string name="btn_add_players">Legg til spillere</string>
    <string name="game_title">Yet Another Piccolo App!</string>
    <string name="settings">Instillinger</string>

    <!-- add_players -->
    <string name="title_add_players">Legg til spillere</string>
    <string name="button_add_player">Legg til</string>
    <string name="text_view_players">Spillere:</string>
    <string name="btn_start_game">Start spill</string>

    <!-- player_selection_phase -->
    <string name="player_selection_instructions">Trykk på skjermen for å gå videre</string>

    <!-- shop_phase -->
    <string name="title_shop_phase">Kjøp-fase</string>
    <string name="button_proceed">Ferdig</string>
    <string name="error_insufficient_funds">Du har ikke nok coins til å kjøpe dette produktet</string>

    <!-- game_over_phase -->
    <string name="game_over_text">Spillet er nå over. Trykk på skjermen for å fortsette til menyen.</string>

    <!-- shop_objects -->
    <string name="shop_object_1">Del ut 5 slurker</string>
    <string name="shop_object_2">Del ut 10 slurker</string>
    <string name="shop_object_3">Del ut 1 shot</string>
    <string name="shop_object_4">Del ut 2 shots</string>
    <string name="shop_object_5">Bytt plass med en spiller</string>
    <string name="shop_object_6">Velg en spiller: spilleren må sitte på golvet en hel runde</string>
    <string name="shop_object_7">Velg en spiller: spilleren kan ikke snakke på en hel runde</string>
    <string name="shop_object_8">Finn på en regel som gjelder ut resten av spillet</string>
    <string name="shop_object_9">Gjør to deltakere til drikke-buddies. Hver gang den ene av de må drikke må den andre også drikke.</string>

    <!-- GAME_CARDS -->

    <!-- pointing_game -->
    <string name="title_pointing_game">Pekeleken</string>
    <string name="page1_pointing_game">Pek på spilleren som [ALTERNATIVE]. Trykk på skjermen når dette er gjort.</string>
    <string name="pointing_game_dialog_description">Velg spilleren som flest pekte på. Denne spilleren får 300 coins og kan dele ut 3 slurker. Hvis gruppen ikke ble enig om én enkelt spiller, velg "hopp over".</string>

    <!-- whisper_challenge -->
    <string name="whisper_challenge_title">Hviskeleken</string>
    <string name="whisper_challenge_description">[PLAYER] finner på et ord og hvisker det til personen til høyre for seg. Dette gjentas til ordet har gått helt rundt til [PLAYER]. Trykk på skjermen når dette er gjort.</string>
    <string name="whisper_challenge_dialog_description">Hvis ordet gikk hele runden rundt uten å forandres: gruppen tar en felles-skål og mottar 100 coins hver. Hvis ikke mister alle 100 coins. Gikk ordet rundt uten å forandres?</string>

    <!-- category_game -->
    <string name="category_game_title">Kategorispillet</string>
    <string name="category_game_description">Kategorien er [CATEGORY]. Hver spiller bytter på å si et ord fra kategorien helt til en spiller bruker for lang tid eller ikke kommer på noe mer. [PLAYER] starter. Trykk på skjermen når dere er ferdig.</string>
    <string name="category_game_dialog_description">Velg spilleren som tapte. Denne spilleren mister 500 coins og drikker tre slurker.</string>

    <!-- tell_joke -->
    <string name="tell_joke_title">Fortell en vits</string>
    <string name="tell_joke_description">[PLAYER] forteller en vits. Trykk på skjermen når dette er gjort.</string>
    <string name="tell_joke_dialog_description">Hvis ingen lo av vitsen drikker spilleren som fortalte vitsen fem slurker og mister 300 coins. Hvis noen lo kan spilleren dele ut fem slurker og mottar 300 coins. Lo noen av vitsen?</string>

    <!-- hum_song -->
    <string name="hum_song_title">Nynn på en sang</string>
    <string name="hum_song_description">[PLAYER] nynner på en sang og de andre prøver å være den første til å gjette hvilken sang det er.</string>
    <string name="hum_song_dialog_description">Hvis noen klarte å gjette riktig sang får spilleren som sang 300 coins og kan dele ut fem slurker. Hvis ingen gjettet riktig mister spilleren 300 coins og må drikke fem slurker. Klarte noen å gjette riktig?</string>
    <string name="hum_song_dialog2_description">Velg spilleren som klarte å gjette sangen. Denne spilleren får også 300 coins og kan dele ut fem slurker.</string>

    <!-- charades_game -->
    <string name="charades_game_title">Miming</string>
    <string name="charades_game_description">Gi mobilen til [PLAYER]. [PLAYER], trykk på skjermen når du har fått mobilen.</string>
    <string name="charades_game_description2">Du skal mime og de andre spillerne skal prøve å være den første til å gjette riktig. Ikke les den neste setningen høyt. Du skal mime [ALTERNATIVE]. Trykk på skjermen når de andre har gjettet.</string>
    <string name="charades_game_dialog_description">Hvis noen klarte å gjette riktig får spilleren som mimet 500 coins og kan dele ut sju slurker. Hvis ingen gjettet riktig mister spilleren 200 coins og må drikke tre slurker. Klarte noen å gjette riktig?</string>
    <string name="charades_game_dialog2_description">Velg spilleren som klarte å gjette riktig. Denne spilleren får også 500 coins og kan dele ut syv slurker.</string>
</resources>